# pwa-server

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: main.yml
src/: config.rs  main.rs
test_data/: config.json
test_data/config_dir/: config.json
test_data/root_dir/: index.html
test_data/root_dir/config/: config.json
