[package]
name = "pwa-server"
version = "1.0.0"
edition = "2021"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"

[package.metadata.release]
publish = false
