[package]
name = "pwa-server"
version = "1.2.1"
edition = "2021"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[package.metadata.release]
publish = false
